fixed text alignment issue

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -10,6 +10,7 @@ $mobileBreak: 769px;
 .table {
   display: table;
   height: 100%;
+  width: 100%;
 }
 
 .table-cell {
